--- a/blogpost.html
+++ b/blogpost.html
@@ -1,9 +1,9 @@
 <html>
    <head>
-     <title>El titulo del post  
+     <title> Bienvenido a Hiperblog 
     </title>
      <link rel="stylesheet" href="estilos.css">
-   </head>
+   </head> 
    
     <body>
       <div id="container">
