Cambié el título del blogpost
Porque puedo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-     <title> Bienvenido a Hiperblog 
+     <title> Bienvenido a mi Hiperblog 
     </title>
      <link rel="stylesheet" href="estilos.css">
    </head> 
