--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-     <title> Bienvenido a mi Hiperblog 
+     <title> Bienvenido a mi Hiperblog 2.0
     </title>
      <link rel="stylesheet" href="estilos.css">
    </head> 
