--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
    
     <body>
       <div id="container">
-        <div id="cabecera">
+        <div id="Cabecera">
          
           Hyperblog
           
